# rbac-task-app

backend/: .dockerignore  .env.example  .gitignore  .ruff.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: initial_migration.py
backend/app/: __init__.py  main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: tasks.py  users.py
backend/app/core/: auth.py  config.py
backend/app/db/: base_class.py  session.py
backend/app/models/: task.py  user.py
backend/app/schemas/: task.py  user.py
backend/app/services/: task.py  user.py
backend/scripts/: init_db.py
backend/tests/: conftest.py  test_users.py
